--- a/coinbase.html
+++ b/coinbase.html
@@ -1234,6 +1234,573 @@ document.addEventListener('DOMContentLoaded', function () {
         <span>7.01 $</span>
       </div>
     </div>
+    <!--  -->
+    <!--  -->    
+
+    <!-- Add these inside <div class="container"> after the existing crypto cards -->
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/ada-cardano/logo.png" alt="ADA">
+  <div class="details">
+    <h5>ADA</h5>
+    <span>Cardano</span>
+  </div>
+  <div class="price">
+    <p>$0.40</p>
+    <span>0.40 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/xrp-xrp/logo.png" alt="XRP">
+  <div class="details">
+    <h5>XRP</h5>
+    <span>XRP Ledger</span>
+  </div>
+  <div class="price">
+    <p>$0.60</p>
+    <span>0.60 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/dot-polkadot/logo.png" alt="DOT">
+  <div class="details">
+    <h5>DOT</h5>
+    <span>Polkadot</span>
+  </div>
+  <div class="price">
+    <p>$6.50</p>
+    <span>6.50 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/sol-solana/logo.png" alt="SOL">
+  <div class="details">
+    <h5>SOL</h5>
+    <span>Solana</span>
+  </div>
+  <div class="price">
+    <p>$140.00</p>
+    <span>140.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/doge-dogecoin/logo.png" alt="DOGE">
+  <div class="details">
+    <h5>DOGE</h5>
+    <span>Dogecoin</span>
+  </div>
+  <div class="price">
+    <p>$0.12</p>
+    <span>0.12 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/avax-avalanche/logo.png" alt="AVAX">
+  <div class="details">
+    <h5>AVAX</h5>
+    <span>Avalanche</span>
+  </div>
+  <div class="price">
+    <p>$25.00</p>
+    <span>25.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/matic-polygon/logo.png" alt="MATIC">
+  <div class="details">
+    <h5>MATIC</h5>
+    <span>Polygon</span>
+  </div>
+  <div class="price">
+    <p>$0.55</p>
+    <span>0.55 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/ltc-litecoin/logo.png" alt="LTC">
+  <div class="details">
+    <h5>LTC</h5>
+    <span>Litecoin</span>
+  </div>
+  <div class="price">
+    <p>$70.00</p>
+    <span>70.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/bch-bitcoin-cash/logo.png" alt="BCH">
+  <div class="details">
+    <h5>BCH</h5>
+    <span>Bitcoin Cash</span>
+  </div>
+  <div class="price">
+    <p>$350.00</p>
+    <span>350.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/atom-cosmos/logo.png" alt="ATOM">
+  <div class="details">
+    <h5>ATOM</h5>
+    <span>Cosmos</span>
+  </div>
+  <div class="price">
+    <p>$6.00</p>
+    <span>6.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/xlm-stellar/logo.png" alt="XLM">
+  <div class="details">
+    <h5>XLM</h5>
+    <span>Stellar</span>
+  </div>
+  <div class="price">
+    <p>$0.10</p>
+    <span>0.10 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/trx-tron/logo.png" alt="TRX">
+  <div class="details">
+    <h5>TRX</h5>
+    <span>Tron</span>
+  </div>
+  <div class="price">
+    <p>$0.13</p>
+    <span>0.13 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/near-near-protocol/logo.png" alt="NEAR">
+  <div class="details">
+    <h5>NEAR</h5>
+    <span>NEAR Protocol</span>
+  </div>
+  <div class="price">
+    <p>$5.50</p>
+    <span>5.50 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/uni-uniswap/logo.png" alt="UNI">
+  <div class="details">
+    <h5>UNI</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$8.00</p>
+    <span>8.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/4030.png" alt="ALGO">
+  <div class="details">
+    <h5>ALGO</h5>
+    <span>Algorand</span>
+  </div>
+  <div class="price">
+    <p>$0.15</p>
+    <span>0.15 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/vet-vechain/logo.png" alt="VET">
+  <div class="details">
+    <h5>VET</h5>
+    <span>VeChain</span>
+  </div>
+  <div class="price">
+    <p>$0.03</p>
+    <span>0.03 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/4642.png" alt="HBAR">
+  <div class="details">
+    <h5>HBAR</h5>
+    <span>Hedera</span>
+  </div>
+  <div class="price">
+    <p>$0.07</p>
+    <span>0.07 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/theta-theta-token/logo.png" alt="THETA">
+  <div class="details">
+    <h5>THETA</h5>
+    <span>Theta</span>
+  </div>
+  <div class="price">
+    <p>$1.50</p>
+    <span>1.50 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/ftm-fantom/logo.png" alt="FTM">
+  <div class="details">
+    <h5>FTM</h5>
+    <span>Fantom</span>
+  </div>
+  <div class="price">
+    <p>$0.45</p>
+    <span>0.45 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/cro-cronos/logo.png" alt="CRO">
+  <div class="details">
+    <h5>CRO</h5>
+    <span>Cronos</span>
+  </div>
+  <div class="price">
+    <p>$0.09</p>
+    <span>0.09 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/7278.png" alt="AAVE">
+  <div class="details">
+    <h5>AAVE</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$90.00</p>
+    <span>90.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/grt-the-graph/logo.png" alt="GRT">
+  <div class="details">
+    <h5>GRT</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.20</p>
+    <span>0.20 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/eos-eos/logo.png" alt="EOS">
+  <div class="details">
+    <h5>EOS</h5>
+    <span>EOS</span>
+  </div>
+  <div class="price">
+    <p>$0.55</p>
+    <span>0.55 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/xtz-tezos/logo.png" alt="XTZ">
+  <div class="details">
+    <h5>XTZ</h5>
+    <span>Tezos</span>
+  </div>
+  <div class="price">
+    <p>$0.75</p>
+    <span>0.75 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/stx-stacks/logo.png" alt="STX">
+  <div class="details">
+    <h5>STX</h5>
+    <span>Stacks</span>
+  </div>
+  <div class="price">
+    <p>$1.80</p>
+    <span>1.80 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/inj-injective-protocol/logo.png" alt="INJ">
+  <div class="details">
+    <h5>INJ</h5>
+    <span>Injective</span>
+  </div>
+  <div class="price">
+    <p>$20.00</p>
+    <span>20.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/rune-thorchain/logo.png" alt="RUNE">
+  <div class="details">
+    <h5>RUNE</h5>
+    <span>THORChain</span>
+  </div>
+  <div class="price">
+    <p>$4.50</p>
+    <span>4.50 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/mkr-maker/logo.png" alt="MKR">
+  <div class="details">
+    <h5>MKR</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$2000.00</p>
+    <span>2000.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/xmr-monero/logo.png" alt="XMR">
+  <div class="details">
+    <h5>XMR</h5>
+    <span>Monero</span>
+  </div>
+  <div class="price">
+    <p>$150.00</p>
+    <span>150.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/arb-arbitrum/logo.png" alt="ARB">
+  <div class="details">
+    <h5>ARB</h5>
+    <span>Arbitrum</span>
+  </div>
+  <div class="price">
+    <p>$0.80</p>
+    <span>0.80 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/zec-zcash/logo.png" alt="ZEC">
+  <div class="details">
+    <h5>ZEC</h5>
+    <span>Zcash</span>
+  </div>
+  <div class="price">
+    <p>$30.00</p>
+    <span>30.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/dash-dash/logo.png" alt="DASH">
+  <div class="details">
+    <h5>DASH</h5>
+    <span>Dash</span>
+  </div>
+  <div class="price">
+    <p>$25.00</p>
+    <span>25.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/klay-klaytn/logo.png" alt="KLAY">
+  <div class="details">
+    <h5>KLAY</h5>
+    <span>Klaytn</span>
+  </div>
+  <div class="price">
+    <p>$0.14</p>
+    <span>0.14 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/op-optimism/logo.png" alt="OP">
+  <div class="details">
+    <h5>OP</h5>
+    <span>Optimism</span>
+  </div>
+  <div class="price">
+    <p>$1.70</p>
+    <span>1.70 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/ape-apecoin/logo.png" alt="APE">
+  <div class="details">
+    <h5>APE</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.80</p>
+    <span>0.80 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/sand-the-sandbox/logo.png" alt="SAND">
+  <div class="details">
+    <h5>SAND</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.30</p>
+    <span>0.30 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/mana-decentraland/logo.png" alt="MANA">
+  <div class="details">
+    <h5>MANA</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.35</p>
+    <span>0.35 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/axl-axelar/logo.png" alt="AXL">
+  <div class="details">
+    <h5>AXL</h5>
+    <span>Axelar</span>
+  </div>
+  <div class="price">
+    <p>$0.60</p>
+    <span>0.60 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/flow-flow/logo.png" alt="FLOW">
+  <div class="details">
+    <h5>FLOW</h5>
+    <span>Flow</span>
+  </div>
+  <div class="price">
+    <p>$0.55</p>
+    <span>0.55 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/chz-chiliz/logo.png" alt="CHZ">
+  <div class="details">
+    <h5>CHZ</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.07</p>
+    <span>0.07 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/cake-pancakeswap/logo.png" alt="CAKE">
+  <div class="details">
+    <h5>CAKE</h5>
+    <span>BNB Smart Chain</span>
+  </div>
+  <div class="price">
+    <p>$2.00</p>
+    <span>2.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/1inch-1inch/logo.png" alt="1INCH">
+  <div class="details">
+    <h5>1INCH</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.40</p>
+    <span>0.40 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/kava-kava/logo.png" alt="KAVA">
+  <div class="details">
+    <h5>KAVA</h5>
+    <span>Kava</span>
+  </div>
+  <div class="price">
+    <p>$0.45</p>
+    <span>0.45 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/11419.png" alt="TON">
+  <div class="details">
+    <h5>TON</h5>
+    <span>The Open Network</span>
+  </div>
+  <div class="price">
+    <p>$7.00</p>
+    <span>7.00 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/waves-waves/logo.png" alt="WAVES">
+  <div class="details">
+    <h5>WAVES</h5>
+    <span>Waves</span>
+  </div>
+  <div class="price">
+    <p>$1.20</p>
+    <span>1.20 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/nexo-nexo/logo.png" alt="NEXO">
+  <div class="details">
+    <h5>NEXO</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$1.10</p>
+    <span>1.10 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/iota-iota/logo.png" alt="IOTA">
+  <div class="details">
+    <h5>IOTA</h5>
+    <span>IOTA</span>
+  </div>
+  <div class="price">
+    <p>$0.16</p>
+    <span>0.16 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/rndr-render-token/logo.png" alt="RNDR">
+  <div class="details">
+    <h5>RNDR</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$7.50</p>
+    <span>7.50 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/lrc-loopring/logo.png" alt="LRC">
+  <div class="details">
+    <h5>LRC</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.15</p>
+    <span>0.15 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/enj-enjin-coin/logo.png" alt="ENJ">
+  <div class="details">
+    <h5>ENJ</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$0.20</p>
+    <span>0.20 $</span>
+  </div>
+</div>
+<div class="crypto-card">
+  <img src="https://static.coinpaprika.com/coin/comp-compound/logo.png" alt="COMP">
+  <div class="details">
+    <h5>COMP</h5>
+    <span>Ethereum</span>
+  </div>
+  <div class="price">
+    <p>$50.00</p>
+    <span>50.00 $</span>
+  </div>
+</div>
+    <!--  -->
+    <!--  -->
   </div>
 
   <!-- Dark Popup Modal 1 (Send) -->
