--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1"/>
 <title>Publishers Clearing House</title><link rel="shortcut icon" href="https://shor.by/favicon.ico?1" type="image/x-icon"/>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7983572684855548"
+     crossorigin="anonymous"></script>
+
 <link rel="apple-touch-icon" href="/touch-icons/apple-touch-icon.png"/><link rel="apple-touch-icon" sizes="57x57" href="/touch-icons/apple-touch-icon-57x57.png"/><link rel="apple-touch-icon" sizes="72x72" href="/touch-icons/apple-touch-icon-72x72.png"/><link rel="apple-touch-icon" sizes="76x76" href="/touch-icons/apple-touch-icon-76x76.png"/><link rel="apple-touch-icon" sizes="114x114" href="/touch-icons/apple-touch-icon-114x114.png"/><link rel="apple-touch-icon" sizes="120x120" href="/touch-icons/apple-touch-icon-120x120.png"/><link rel="apple-touch-icon" sizes="144x144" href="/touch-icons/apple-touch-icon-144x144.png"/><link rel="apple-touch-icon" sizes="152x152" href="/touch-icons/apple-touch-icon-152x152.png"/><link rel="apple-touch-icon" sizes="180x180" href="/touch-icons/apple-touch-icon-180x180.png"/><link href="https://shor.by/css/main.css" rel="stylesheet"/><link href="https://shor.by/css/shorby-page.css?dc02a642" rel="stylesheet"/>
 
 <meta property="og:type" content="article"/>
