--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,8 @@
 <!-- 
 <base href="https://shor.by">
 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7983572684855548"
+     crossorigin="anonymous"></script>
 
             </head><body class="theme-custom custom-theme"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WCJDT87" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><style type="text/css">
 .theme-custom{
