--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7983572684855548"
+     crossorigin="anonymous"></script>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
 
