--- a/shor.html
+++ b/shor.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <link rel="shortcut icon" href="https://shor.by/favicon.ico?1" type="image/x-icon"/>
-    
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7983572684855548"
+     crossorigin="anonymous"></script> 
     <!-- FontAwesome -->
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
